EE: Fixed #16704: Opacity bug in admin home screen. Fixed #16595: Message Box Pop Up window is unreadable (Firefox 3.5)

--- a/skin/adminhtml/default/enterprise/boxes.css
+++ b/skin/adminhtml/default/enterprise/boxes.css
@@ -110,8 +110,8 @@
     height:100%;
     z-index:9999;
     background-color:#efefef;
-    opacity:.2;
-    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=20)"; /* IE8 */
+    opacity:.5;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)"; /* IE8 */
     }
 
 #message-popup-window-mask .flash-window {
